# fbp-scratch

./: buildall.sh  min.debug.yaml  min.local.yaml  min.yaml  minimal-sam.yaml  nodejs.toml  package-lock.json  pom.xml  response.json  sam_build_deploy_all_python.sh  samconfig.toml  template.yaml  test-payload.json  test-template.yaml  testAddUser.sh  testAddUserWorked.sh  update-stack.sh
.aws-sam/: build.toml
AddFBPUser/: dependency-reduced-pom.xml  pom.xml
GetFBPPicksForUser/: dependency-reduced-pom.xml  pom.xml
GetFBPUsers/: dependency-reduced-pom.xml  pom.xml
GetScheduleSheet/: pom.xml
GetWeeklyResults/: dependency-reduced-pom.xml  pom.xml
GetWeeklyResultsSheet/: dependency-reduced-pom.xml  pom.xml
SaveFBPPicks/: pom.xml
UsefulInfo/: call-lamba-from-java.txt
Utils/: dependency-reduced-pom.xml  pom.xml
events/: GetPoolConfig.json  GetPoolOpenEvent.json  SetPoolOpen.json  SetPoolStatus.json  SetPoolStatusClosed.json  SetPoolStatusOpen.json  addFBPUser.json  getAllFBPPicksPython.json  getFBPPicks.json  getFBPPicksForUser.json  getFBPPicksPython.json  getFBPUser.json  getFBPUserPython.json  getPickSheet.json  getPreSignedUrl.json  getWeeklyResults.json  saveContent.json  saveFBPPicks.json
scripts/: sam_local_debug_invoke.sh  sync_fbplib_layer_requirements.sh
src/: pom.xml
src/FBPLib/: __init__.py  getCurrentWeek.py  pyproject.toml
src/FBPLib-Layer/: requirements.txt
src/GetAllFBPPicks/: dependency-reduced-pom.xml  pom.xml
src/GetPreSignedUrl/: pom.xml
src/Utils/: pom.xml
src/fbplib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
(+54 files in other folders)
